# capital-gains

./: Cargo.toml  Makefile
src/: config.rs  lib.rs  main.rs  serializer.rs
tests/: integration.rs
