[package]
name = "capital-gains"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
rust_decimal = "1.12.3"
